tests/lean/holeErrors.lean.expected.out
holeErrors.lean:3:14-3:20: error: don't know how to synthesize implicit argument 'α'
  @id ?m
context:
⊢ Sort u
holeErrors.lean:3:4-3:10: error: Failed to infer type of definition 'f1.{u}'
holeErrors.lean:5:4-5:6: error: Failed to infer type of definition 'f2'
when the resulting type of a declaration is explicitly provided, all holes (e.g., `_`) in the header are resolved before the declaration body is processed
holeErrors.lean:8:9-8:15: error: don't know how to synthesize implicit argument 'α'
  @id ?m
context:
⊢ Sort u
holeErrors.lean:8:4-8:5: error: failed to infer 'let' declaration type
holeErrors.lean:7:4-7:10: error: Failed to infer type of definition 'f3.{u}'
holeErrors.lean:11:4-11:6: error: Failed to infer type of definition 'f4'
holeErrors.lean:11:8-11:9: error: Failed to infer type of binder 'x'
holeErrors.lean:13:4-13:6: error: Failed to infer type of definition 'f5'
holeErrors.lean:13:8-13:9: error: Failed to infer type of binder 'x'
holeErrors.lean:16:4-16:5: error: Failed to infer type of binder 'x'
holeErrors.lean:15:4-15:6: error: Failed to infer type of definition 'f6'
holeErrors.lean:19:13-19:19: error: don't know how to synthesize implicit argument 'α'
  @id ?m
context:
⊢ Sort u
holeErrors.lean:19:8-19:9: error: failed to infer 'let rec' declaration type
